--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<div class="display-t">
 						<div class="display-tc">
 							<h1 class="animate-box" data-animate-effect="fadeIn">快享支付</h1>
-							<h2>去平台化支付通证激励生态网络</h2>
+							<h2>去平台化通证支付生态网络</h2>
 							<p class="gtco-video-link animate-box" data-animate-effect="fadeIn">
 								<a href="https://vimeo.com/channels/staffpicks/93951774" class="popup-vimeo">
 									<i class="icon-controller-play"></i>
@@ -98,9 +98,10 @@
 				</div>
 				<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 					<h2 class="heading-colored">消费 &amp; 赚钱</h2>
-					<p>没有中心利益集团，消费与赚钱共生在生态场景中。</p>
-					<p>赚钱效应与生态贡献相关。</p>
-					<p><a href="#" class="read-more">Read more <i class="icon-chevron-right"></i></a></p>
+					<p><b>没有中心利益集团</b></p>
+					<p>快享主导一种新的消费生活方式，利用加密的分布式记账技术，打造“消费挖米锭，持续享收益”的去平台化通证经济网络。</p>
+					<p><b>消费与赚钱共生在生态场景中,赚钱效应与生态贡献相关</b></p>
+					<p>快享实现让生态内角色权益回归，每个参与快享生态建设的角色都能获得属于自己贡献的权益确权，商户使用快享支付系统收款向平台贡献客流而赚钱，消费者消费能获得米锭，持有米锭享收益。</p>
 				</div>
 			</div>
 		</div>
