--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 			<div class="row">
 				<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 					<div class="img-shadow">
-						<img src="images/img_1.png" class="img-responsive">
+						<img src="images/img_1.jpg" class="img-responsive">
 					</div>
 				</div>
 				<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
@@ -119,7 +119,7 @@
 				<div class="col-md-6">
 					<div class="gtco-practice-area-item animate-box">
 						<div class="gtco-icon">
-							<img src="images/scale.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+							<img src="images/timg-1-43.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 						</div>
 						<div class="gtco-copy">
 							<h3>快享商家联盟</h3>
@@ -132,7 +132,7 @@
 				<div class="col-md-6">
 					<div class="gtco-practice-area-item animate-box">
 						<div class="gtco-icon">
-							<img src="images/scale.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+							<img src="images/timg-2-43.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 						</div>
 						<div class="gtco-copy">
 							<h3>快享消费用户</h3>
