--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 						<li><a href="#" data-nav-section="eco-system">生态导图</a></li>
 						<li><a href="#" data-nav-section="join-us">加入快享网络</a></li>
 						<li><a href="#" data-nav-section="mining-strategy">挖矿攻略</a></li>
-						<li><a href="#" data-nav-section="open-platform"><span>开放平台</span></a></li>
+						<li><a href="#" data-nav-section="open-platform">开放平台</a></li>
 						<li><a href="#" data-nav-section="reputation">名誉资质</a></li>
-						<li><a href="#" data-nav-section="contact">关注我们</a></li>
+						<li><a href="#" data-nav-section="contact">成为服务商</a></li>
 					</ul>
 				</div>
 			</div>
@@ -238,7 +238,7 @@
 		</div>
 	</section>
 
-	<section id="gtco-contact" data-section="contact">
+	<!-- <section id="gtco-contact" data-section="contact">
 		<div class="container">
 			<div class="row row-pb-md">
 				<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
@@ -261,25 +261,125 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
+
+	<section id="gtco-contact" data-section="contact">
+			<div class="container">
+				<div class="row row-pb-md">
+					<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
+						<h1>成为服务商</h1>
+						<p class="sub"></p>
+					</div>
+				</div>
+				<div class="row">
+				<div class="col-md-6 animate-box">
+						<form action="#">
+						<div class="form-group">
+								<label for="name" class="sr-only">姓名</label>
+								<input type="text" class="form-control" placeholder="姓名" id="name">
+							</div>
+							<div class="form-group">
+								<label for="number" class="sr-only">手机号码</label>
+								<input type="text" class="form-control" placeholder="手机号码" id="number">
+							</div>
+							<div class="form-group">
+								<label for="company" class="sr-only">公司名称</label>
+								<input type="text" class="form-control" placeholder="公司名称" id="company">
+							</div>
+							<div class="form-group">
+								<label for="trade" class="sr-only">所属行业</label>
+								<input type="text" class="form-control" placeholder="所属行业" id="trade">
+							</div>
+						</form>
+					</div>
+					<div class="col-md-6 animate-box">
+						<form action="#">
+							<div class="form-group">
+								<label for="resource" class="sr-only">资源状态</label>
+								<input type="text" class="form-control" placeholder="资源状态" id="resource">
+							</div>
+							<div class="form-group">
+								<label for="province" class="sr-only">意向省份</label>
+								<input type="text" class="form-control" placeholder="意向省份" id="province">
+							</div>
+							<div class="form-group">
+								<label for="city" class="sr-only">意向城市</label>
+								<input type="text" class="form-control" placeholder="意向城市" id="city">
+							</div>
+							<div class="form-group">
+								<input type="submit" value="成为服务商" class="btn btn-primary">
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</section>
 	
 	<footer id="gtco-footer" role="contentinfo">
 		<div class="container">
-			
-			<div class="row copyright">
-				<div class="col-md-12">
-					<p class="pull-left">
-						<small class="block">&copy; 2019 快享（上海）信息科技有限公司. All Rights Reserved</small> 
-					</p>
-					<p class="pull-right">
-						<ul class="gtco-social-icons pull-right">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-sina-weibo"></i></a></li>
-						</ul>
-					</p>
+			<div class="row info">
+				<div class="col-md-6">
+					<div class="col-md-12 animate-box" data-animate-effect="fadeIn">
+						<h3>战略合作</h3>
+					</div>
+					<div class="col-md-12 col-xs-12">
+						<div class="icon col-md-6 col-xs-6 animate-box">
+							<div class="img-shadow col-md-5">
+								<img src="images/11.png" class="img-responsive" alt="示意图">
+							</div>
+							<div class="col-md-7">
+								<p class="name">支付宝</p>
+							</div>
+						</div>
+						<div class="icon col-md-6 col-xs-6  animate-box">
+							<div class="img-shadow col-md-5">
+								<img src="images/22.png" class="img-responsive" alt="示意图">
+							</div>
+							<div class="col-md-7">
+								<p class="name">微信</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-12 col-xs-12">
+						<div class="icon col-md-6 col-xs-6  animate-box">
+							<div class="img-shadow col-md-5">
+								<img src="images/33.png" class="img-responsive" alt="示意图">
+							</div>
+							<div class="col-md-7">
+								<p class="name">银联</p>
+							</div>
+						</div>
+						<div class="icon col-md-6 col-xs-6 animate-box">
+							<div class="img-shadow col-md-5">
+								<img src="images/44.png" class="img-responsive" alt="示意图">
+							</div>
+							<div class="col-md-7">
+								<p class="name">拉卡拉</p>
+							</div>
+						</div>
+					</div>
 				</div>
+				<div class="col-md-6">
+					<div class="col-md-12 animate-box" data-animate-effect="fadeIn">
+						<h3>关注我们</h3>
+						<p class="sub">添加快享官方客服，加入快享共识社群</p>
+					</div>
+					<div class="col-md-6 animate-box">
+						<div class="img-shadow col-md-8 col-md-offset-2 col-xs-6 col-xs-offset-3">
+							<img src="images/orq_1.jpg" class="img-responsive" alt="示意图">
+						</div>
+						<span class="align col-md-12 col-xs-12">微信客服：kxfusang</span>
+					</div>
+					<div class="col-md-6 animate-box">
+						<div class="img-shadow col-md-8 col-md-offset-2 col-xs-6 col-xs-offset-3">
+							<img src="images/orq_2.jpg" class="img-responsive" alt="示意图">
+						</div>
+						<span class="align col-md-12 col-xs-12">微信客服：asoulo_wu</span>
+					</div>
+				</div>
+			</div>
+			<div class="row copyright">
+				<p><small class="align">&copy; 2019 快享（上海）信息科技有限公司. All Rights Reserved</small> </p>
 			</div>
 
 		</div>
