--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 								<img src="images/11.png" class="img-responsive" alt="示意图">
 							</div>
 							<div class="col-md-7">
-								<p class="name">微信</p>
+								<p class="name">支付宝</p>
 							</div>
 						</div>
 						<div class="icon col-md-6 col-xs-6  animate-box">
